-fixed index white space for mobile -fixed thank you message font sizeing on thank-you page -tweaked setting sun animation on index -added time ref animation to about page

--- a/assets/css/about-style.css
+++ b/assets/css/about-style.css
@@ -42,6 +42,39 @@ margin-right: 50px;
 max-width: 500px;
 }
 
+@keyframes rotate-img {
+    0%  { transform: rotate(0deg)}
+    100%{ transform: rotate(360deg) }
+}
+
+.time-ref{
+    display: block;
+}
+
+.time-ref img{
+    animation: rotate-img  5s linear infinite;
+    float: right;
+    position: relative;
+    right: 20%;
+    top: 0%;
+    width: 3vw;
+    height: 3vw;
+}
+
+.time-circle{
+    margin-top: 3%;
+    display: inline-block;
+    float: right;
+    position: relative;
+    right: 20%;
+    width: 10vw;
+    height: 10vw;
+    border-radius: 50%;
+    border-style: solid;
+    border-width: 0.4vw;
+    border-color: #ff7660;
+}
+
 .img-container{
     margin-left: 20px;
     margin-right: 20px;
