--- a/assets/css/client-style.css
+++ b/assets/css/client-style.css
@@ -1,9 +1,11 @@
 .quote-container{
     max-width: 800px;
+    display: block;
     margin-left: 50px;
     margin-right: 50px;
     margin-bottom: 100px;
-    margin-top: -100px;
+    margin-top: 0px;
+    
 }
 
 /*img container styles*/
