--- a/assets/css/contact-style.css
+++ b/assets/css/contact-style.css
@@ -95,6 +95,7 @@ form input{
     padding-left: 10px;
     border-radius: 0;
     outline: none;
+    box-shadow: none;
 }
 
 form input:focus{
@@ -114,6 +115,7 @@ form textarea{
     font-size: 18px;
     padding-left: 10px;
     outline: none;
+    box-shadow: none;
 }
 
 form textarea:focus{
